PRAGMA foreign_keys=ON;
CREATE TABLE IF NOT EXISTS users(id INTEGER PRIMARY KEY, name TEXT NOT NULL, email TEXT NOT NULL UNIQUE, password_hash TEXT NOT NULL, role TEXT NOT NULL CHECK(role IN ('client','admin')));
CREATE TABLE IF NOT EXISTS sessions(token TEXT PRIMARY KEY, user_id INTEGER NOT NULL REFERENCES users(id) ON DELETE CASCADE, expires INTEGER NOT NULL);
CREATE TABLE IF NOT EXISTS dishes(id INTEGER PRIMARY KEY, name TEXT NOT NULL, category TEXT NOT NULL, description TEXT NOT NULL, price INTEGER NOT NULL CHECK(price>0), stock INTEGER NOT NULL CHECK(stock>=0));
CREATE TABLE IF NOT EXISTS cart_items(user_id INTEGER REFERENCES users(id) ON DELETE CASCADE, dish_id INTEGER REFERENCES dishes(id), quantity INTEGER NOT NULL CHECK(quantity BETWEEN 1 AND 99), PRIMARY KEY(user_id,dish_id));
CREATE TABLE IF NOT EXISTS orders(id INTEGER PRIMARY KEY, user_id INTEGER NOT NULL REFERENCES users(id), status TEXT NOT NULL CHECK(status IN ('new','cooking','ready','completed','cancelled')), total INTEGER NOT NULL CHECK(total>0), created_at TEXT NOT NULL, comment TEXT NOT NULL DEFAULT '');
CREATE TABLE IF NOT EXISTS order_items(id INTEGER PRIMARY KEY, order_id INTEGER NOT NULL REFERENCES orders(id) ON DELETE CASCADE, dish_id INTEGER NOT NULL REFERENCES dishes(id), name TEXT NOT NULL, price INTEGER NOT NULL CHECK(price>0), quantity INTEGER NOT NULL CHECK(quantity BETWEEN 1 AND 99));
CREATE INDEX IF NOT EXISTS idx_orders_user ON orders(user_id);
